feat: get current crew endpoint
